ading a traversal system in the all rooms